@@ -22,6 +22,9 @@
 	  function is much slower than a more direct "(while
 	  (re-search-forward " approach.
 
+	* (p4-save-opened-files): Optimized by not using the
+	  p4-read-depot-output function.
+
 2002-07-25  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-menu-def): Reordered code blocks to make xemacs work
